--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -14,23 +14,25 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.24.0",
-    "@aws-sdk/client-s3": "^3.540.0",
     "@aws-sdk/client-ec2": "^3.540.0",
     "@aws-sdk/client-lambda": "^3.540.0",
-    "@google/generative-ai": "^0.2.1",
+    "@aws-sdk/client-s3": "^3.540.0",
     "@google-cloud/compute": "^4.2.0",
     "@google-cloud/storage": "^7.7.0",
+    "@google/generative-ai": "^0.2.1",
+    "@kubernetes/client-node": "^0.20.0",
     "@mistralai/mistralai": "^0.4.0",
+    "@modelcontextprotocol/sdk": "^0.5.0",
     "@octokit/rest": "^20.0.2",
     "@slack/web-api": "^6.11.2",
     "axios": "^1.6.7",
     "dockerode": "^4.0.2",
     "jira-client": "^8.2.2",
-    "kubernetes-client": "^10.0.0",
     "openai": "^4.47.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/dockerode": "^4.0.1",
     "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
